# cpp-template-multidir

./: .clang-format  .clang-tidy  .gitignore  .neoignore  Makefile  README.md
doc/: clang-format.py  clang-tidy.cfg  clang-tidy.py  clang-tools.sh  install_3rdparty.sh  link_3rdparty.sh  run.sh.example
public/: CMakeLists.txt  Makefile
public/include/: blocking_queue.h  common.h  thread_pool.h  timer.h  util.h
public/src/: timer.cpp  util.cpp
public/tools/: main.cpp
public/unittest/: main.cpp
public/unittests/: unittest.cpp
